[package]
name = "runic"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
nix = { version = "0.31.3", features = ["process", "hostname", "sched", "mount", "fs"] }
rand = "0.8.5"
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
tar = "0.4"
flate2 = "1"
